fix images not showing

--- a/home.css
+++ b/home.css
@@ -23,7 +23,7 @@ h1,h2,h3{
 }
 
 .hero-bg{
-    background-image: url(img/Siófok\,\ Léda\ utca\ \(2\).jpg);
+    background-image: url(img/Siofok\,\ Leda\ utca\ \(2\).jpg);
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.7);
     background-blend-mode: multiply;
